<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pinata</string>
    <string name="app_done">Done</string>
    <string name="greeter_label">Pinata Greeter</string>
    <string name="greeter_create_user_button_text">sign up</string>
    <string name="greeter_login_button_text">log in</string>
    <string name="create_user_label">Pinata Signup</string>
    <string name="create_user_next_button_text">next</string>
    <string name="create_user_submit_button_text">sign up</string>
    <string name="create_user_birthday_button_text">birthday</string>
    <string name="create_user_username_edittext_hint">username</string>
    <string name="create_user_password_edittext_hint">password</string>
    <string name="create_user_firstname_edittext_hint">first name</string>
    <string name="create_user_lastname_edittext_hint">last name</string>
    <string name="create_user_email_edittext_hint">email</string>
    <string name="create_user_male_radiobutton_text">male</string>
    <string name="create_user_female_radiobutton_text">female</string>
    <string name="create_user_birthday_dialog_title">Choose birthday</string>
    <string name="login_label">Pinata Login</string>
    <string name="login_username_edittext_hint">username</string>
    <string name="login_password_edittext_hint">password</string>
    <string name="login_submit_button_text">log in</string>
    <string name="profile_label">Pinata Profile</string>
    <string name="profile_logout_button_text">Logout</string>
    <string name="profile_create_event_button_text">Create Event</string>
    <string name="create_event_label">Pinata Create Event</string>
    <string name="create_event_submit_button_text">Create Event</string>
    <string name="create_event_status_textview_text">Ready</string>
    <string name="create_event_eventname_edittext_hint">Event name</string>
    <string name="create_event_location_edittext_hint">location</string>
    <string name="create_event_byob_checkbox_text">byob?</string>
</resources>
