<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              >
  <TextView
      android:id="@+id/profile_label_textview"
      android:layout_width="match_parent" 
      android:layout_height="wrap_content" 
      android:text="@string/profile_label"
      android:background="@color/ui_theme_color_a"
      android:textColor="@color/ui_static_text_color"
      />
  <Button
      android:id="@+id/profile_logout_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/profile_logout_button_text"
      android:onClick="onLogoutButtonClicked"
      android:background="@color/ui_theme_color_b"
      android:textColor="@color/ui_button_text_color"
      android:textSize="@dimen/ui_button_text_size"
      />
  <Button
      android:id="@+id/profile_create_event_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/profile_create_event_button_text"
      android:onClick="onCreateEventButtonClicked"
      android:background="@color/ui_theme_color_b"
      android:textColor="@color/ui_button_text_color"
      android:textSize="@dimen/ui_button_text_size"
      />
</LinearLayout>
