<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/ui_background_color"
              >
  <TextView
      android:id="@+id/login_label_textview"
      android:layout_width="match_parent" 
      android:layout_height="wrap_content" 
      android:text="@string/login_label"
      android:background="@color/ui_theme_color_b"
      android:textColor="@color/ui_static_text_color"
      android:textSize="@dimen/ui_label_text_dimension"
      android:layout_marginBottom="@dimen/ui_vertical_margin"
      />
  <EditText
      android:id="@+id/login_username_edittext"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/login_username_edittext_hint"
      android:background="@color/ui_edittext_background_color"
      android:textColorHint="@color/ui_edittext_hinttext_color"
      android:textColor="@color/ui_edittext_text_color"
      android:textSize="@dimen/ui_edittext_text_size"
      android:layout_marginBottom="@dimen/ui_vertical_margin"
      android:singleLine="true"
      android:maxLines="1"
      />
  <EditText
      android:id="@+id/login_password_edittext"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/login_password_edittext_hint"
      android:background="@color/ui_edittext_background_color"
      android:textColorHint="@color/ui_edittext_hinttext_color"
      android:textColor="@color/ui_edittext_text_color"
      android:textSize="@dimen/ui_edittext_text_size"
      android:layout_marginBottom="@dimen/ui_vertical_margin"
      android:password="true"
      android:singleLine="true"
      android:maxLines="1"
      />
  <Button
      android:id="@+id/login_submit_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/login_submit_button_text"
      android:onClick="onSubmitButtonClicked"
      android:background="@color/ui_theme_color_a"
      android:textColor="@color/ui_button_text_color"
      android:textSize="@dimen/ui_button_text_size"
      />
</LinearLayout>
