<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"              
              android:background="@color/ui_theme_color_a">
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:layout_weight=".66"
                >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="bottom"
                  android:layout_weight=".4"
                  ></LinearLayout>

    <EditText
        android:id="@+id/create_user_firstname_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_user_firstname_edittext_hint"
        android:background="@color/ui_edittext_background_color"
        android:textColorHint="@color/ui_edittext_hinttext_color"
        android:textColor="@color/ui_edittext_text_color"
        android:textSize="@dimen/ui_edittext_text_size"
        android:textStyle="@integer/ui_edittext_text_style"
        android:singleLine="true"
        android:inputType="text|textNoSuggestions"
	android:ellipsize="end"
        android:layout_weight=".2"

        android:shadowColor="@color/ui_text_shadow_color"
        android:shadowRadius="@dimen/ui_text_shadow_radius"
        android:shadowDx="@dimen/ui_text_shadow_dx"
        android:shadowDy="@dimen/ui_text_shadow_dy"
        
        android:gravity="center"
        android:maxLines="1"
        />
    <EditText
        android:id="@+id/create_user_lastname_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_user_lastname_edittext_hint"
        android:background="@color/ui_edittext_background_color"
        android:textColorHint="@color/ui_edittext_hinttext_color"
        android:textColor="@color/ui_edittext_text_color"
        android:textSize="@dimen/ui_edittext_text_size"
        android:textStyle="@integer/ui_edittext_text_style"
        android:singleLine="true"
        android:inputType="text|textNoSuggestions"
	android:ellipsize="end"
        android:layout_weight=".2"

        android:shadowColor="@color/ui_text_shadow_color"
        android:shadowRadius="@dimen/ui_text_shadow_radius"
        android:shadowDx="@dimen/ui_text_shadow_dx"
        android:shadowDy="@dimen/ui_text_shadow_dy"
        
        android:gravity="center"
        android:maxLines="1"
        />
    <Button
        android:id="@+id/create_user_birthday_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/create_user_birthday_button_text"
        android:onClick="onBirthdayButtonClicked"
        android:background="@color/ui_button_color"
        android:textColor="@color/ui_static_text_color"
        android:textSize="@dimen/ui_edittext_text_size"
        android:textStyle="@integer/ui_edittext_text_style"
        
        android:layout_weight=".2"
        
        android:shadowColor="@color/ui_text_shadow_color"
        android:shadowRadius="@dimen/ui_text_shadow_radius"
        android:shadowDx="@dimen/ui_text_shadow_dx"
        android:shadowDy="@dimen/ui_text_shadow_dy"/>
  </LinearLayout>
  <Button
      android:id="@+id/create_user_next_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="bottom"
      android:text="@string/create_user_next_button_text"
      android:onClick="onNextButtonClicked"
      android:background="@color/ui_button_color"
      android:textColor="@color/ui_themed_button_text_b"
      android:textSize="@dimen/ui_button_text_size"
      android:textStyle="@integer/ui_edittext_text_style"
      android:enabled="false"
      
      android:layout_weight=".33"
      
      android:shadowColor="@color/ui_text_shadow_color"
      android:shadowRadius="@dimen/ui_text_shadow_radius"
      android:shadowDx="@dimen/ui_text_shadow_dx"
      android:shadowDy="@dimen/ui_text_shadow_dy"/>
      />
</LinearLayout>
