<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"              
              android:background="@color/ui_theme_color_a">
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:layout_weight=".66"
                >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="bottom"
                  android:layout_weight=".4"
                  ></LinearLayout>
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/create_user_gender_radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:orientation="vertical">
      <RadioButton android:id="@+id/create_user_male_radiobutton"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/create_user_male_radiobutton_text"
                   android:textColor="@color/ui_themed_radio_button_text_b"
                   android:textSize="@dimen/ui_static_text_size"
                   android:textStyle="@integer/ui_text_style"
                   android:gravity="center"
                   android:shadowColor="@color/ui_text_shadow_color"
                   android:shadowRadius="@dimen/ui_text_shadow_radius"
                   android:shadowDx="@dimen/ui_text_shadow_dx"
                   android:shadowDy="@dimen/ui_text_shadow_dy"
                   android:layout_weight=".5"
                   android:button="@null"/>
      <RadioButton android:id="@+id/create_user_female_radiobutton"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/create_user_female_radiobutton_text"
                   android:textColor="@color/ui_themed_radio_button_text_b"
                   android:textSize="@dimen/ui_static_text_size"
                   android:textStyle="@integer/ui_text_style"
                   android:gravity="center"
                   android:shadowColor="@color/ui_text_shadow_color"
                   android:shadowRadius="@dimen/ui_text_shadow_radius"
                   android:shadowDx="@dimen/ui_text_shadow_dx"
                   android:shadowDy="@dimen/ui_text_shadow_dy"
                   android:layout_weight=".5"
                   android:button="@null"/>
    </RadioGroup>
  </LinearLayout>
  <Button
      android:id="@+id/create_user_next_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="bottom"
      android:text="@string/create_user_next_button_text"
      android:onClick="onNextButtonClicked"
      android:background="@color/ui_button_color"
      android:textColor="@color/ui_themed_button_text_b"
      android:textSize="@dimen/ui_button_text_size"
      android:textStyle="@integer/ui_text_style"
      android:shadowColor="@color/ui_text_shadow_color"
      android:shadowRadius="@dimen/ui_text_shadow_radius"
      android:shadowDx="@dimen/ui_text_shadow_dx"
      android:shadowDy="@dimen/ui_text_shadow_dy"
      android:enabled="false"
      
      android:layout_weight=".33"
      />
</LinearLayout>
